--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Case Study 6 - OpenClassrooms",
     "main": "index.js",
     "scripts": {
-      "lint": "eslint --max-warnings=0 ."
+      "lint": "eslint --max-warnings=0 .",
+      "sass": "sass --watch ./sass/main.scss:./public/css/main.css",
+      "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/"
     },
     "repository": {
       "type": "git",
@@ -19,4 +21,5 @@
     "devDependencies": {
       "eslint": "^8.13.0"
     }
+
   }
